--- a/index.html
+++ b/index.html
@@ -4,12 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/Lemon-Liu-Recipes-Recipe-dessert-cake.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/style">
-    <title>Cárdapio</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Acreanos 68
+    </title>
 </head>
 <body>
     <header>
-        
+        <img src="imagens/logo.jpg" alt="">
+        <nav>
+            <ul>
+                <li><a href="#">Sobre nós</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Localização</a></li>
+                <li><a href="#">Cardápio</a></li>
+            </ul>
+        </nav>
     </header>
+    <section class="normal">
+
+        <h2>Sobre nós</h2>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate odio omnis consectetur aperiam facilis error ratione? Rem voluptatibus ea quo itaque aperiam doloribus temporibus minima adipisci eos? Commodi, quod aut?
+        </p>
+    </section>
+
+
+    <section class="imagem" id="img01">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ipsum a numquam vero voluptate corporis odio aut, doloremque animi sequi dolorem, id eum? Repudiandae velit magnam accusantium soluta a cupiditate.
+            Laudantium vero a nobis veniam autem molestias corporis perferendis odit, ipsum possimus facere vitae suscipit saepe eveniet voluptates quod minus sint aliquam optio numquam cumque vel deserunt atque! Commodi, accusantium?
+        </p>
+    </section>
+
+
+    <section class="normal">
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum aspernatur harum impedit deserunt! Unde magnam voluptatum excepturi mollitia voluptate quaerat sapiente, exercitationem aliquam assumenda expedita! Impedit sint doloribus maiores aliquam.
+        </p>
+    </section>
+
+
+    <section class="imagem" id="img02">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus consectetur consequatur at rem eos ab illo quia velit necessitatibus cumque exercitationem eligendi quidem perspiciatis, illum sequi voluptates laboriosam corporis? Dignissimos.
+    </section>
+
+
+    <section class="normal">
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi assumenda inventore deserunt quibusdam. Eligendi quaerat atque asperiores, fugiat aliquid inventore incidunt deleniti adipisci. Iure atque saepe ipsa sed, ut sit!
+    </section>
 </body>
 </html>
