fiz o cardápio e falta mais coisas

--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/Lemon-Liu-Recipes-Recipe-dessert-cake.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/logo.jpg " type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>Acreanos 68
     </title>
 </head>
 <body>
-    <header>
-        <img src="imagens/logo.jpg" alt="">
+    <header> 
+        <h1>ACREANOS 68</h1>
+        <h3>O melhor do Acre para você</h3>
         <nav>
             <ul>
                 <li><a href="#">Sobre nós</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Localização</a></li>
-                <li><a href="#">Cardápio</a></li>
+                <li><a href="card.html" target="_blank">Cardápio</a></li>
             </ul>
         </nav>
     </header>
@@ -56,4 +58,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi assumenda inventore deserunt quibusdam. Eligendi quaerat atque asperiores, fugiat aliquid inventore incidunt deleniti adipisci. Iure atque saepe ipsa sed, ut sit!
     </section>
 </body>
+<footer>
+    <p>&copy; 2024 Acreanos 68. Todos os direitos reservados.</p>
+</footer>
 </html>
