--- a/card.html
+++ b/card.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
     <title>Cardápio</title>
 </head>
 <body>
+    <img src="imagens/Acreanos-logo1.png" alt="">
     <h1>Cardápio</h1>
     <section class="menu">
         <div class="item">
