--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/logo.jpg " type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>Acreanos 68
     </title>
 </head>
 <body>
     <header> 
-        <h1>ACREANOS 68</h1>
+        <img src="imagens/Acreanos-logo1.png" alt="logo principal">
         <h3>O melhor do Acre para você</h3>
         <nav>
             <ul>
                 <li><a href="#">Sobre nós</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Localização</a></li>
+                <li><a href="#">Trabalhe conosco</a></li>
+                <li><a href="#">Unidades</a></li>
                 <li><a href="card.html" target="_blank">Cardápio</a></li>
             </ul>
         </nav>
