--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#">Sobre nós</a></li>
-                <li><a href="form.html">Trabalhe conosco</a></li>
+                <li><a href="form.html">Trabalhe&nbsp; conosco</a></li>
                 <li><a href="#">Unidades</a></li>
                 <li><a href="card.html" target="_blank">Cardápio</a></li>
             </ul>
