--- a/card.html
+++ b/card.html
@@ -48,6 +48,19 @@
             <p>Um dos pratos mais tradicionais do Acre tem nome bastante inusitado: baixaria. A preparação dele consiste na mistura de cuscuz de milho hidratado com manteiga, carne moída bem temperada, ovo frito e cheiro-verde. Para acompanhar o prato, outra peculiaridade: uma caneca grande de café com leite.</p>
             <p>R$ 25,00</p>
         </div>
+        <div class="item">
+            <div class="item">
+                <img src="imagens/Baixaria-img.webp" alt="Prato 1">
+                <h2>Baixaria</h2>
+                <p>Um dos pratos mais tradicionais do Acre tem nome bastante inusitado: baixaria. A preparação dele consiste na mistura de cuscuz de milho hidratado com manteiga, carne moída bem temperada, ovo frito e cheiro-verde. Para acompanhar o prato, outra peculiaridade: uma caneca grande de café com leite.</p>
+                <p>R$ 25,00</p>
+            </div>
+        </div>
+            <img src="imagens/Baixaria-img.webp" alt="Prato 1">
+            <h2>Baixaria</h2>
+            <p>Um dos pratos mais tradicionais do Acre tem nome bastante inusitado: baixaria. A preparação dele consiste na mistura de cuscuz de milho hidratado com manteiga, carne moída bem temperada, ovo frito e cheiro-verde. Para acompanhar o prato, outra peculiaridade: uma caneca grande de café com leite.</p>
+            <p>R$ 25,00</p>
+        </div>
         </section>
 
 <button><a href="index.html">Voltar à página principal</a></button>
