--- a/form.html
+++ b/form.html
@@ -18,13 +18,17 @@
         <img src="imagens/pexels-anntarazevich-6937470.jpg" alt="imagens de restaurante">
         </div>
     </header>
-    <!-- <form action="login.php" method="post" autocomplete="on">
-        <div class="campo">
-
+    <form action="login.php" method="post">
+        
+        <h2>Envie seu curriculum e seja mais um "Acreano" </h2>
             <input type="file" name="file" id="ifile">
 
-        </div>
         <input type="submit" value="Enviar">
-    </form> -->
+        <p>Levantarei os meus olhos para os montes, de onde vem o meu socorro.
+        O meu socorro vem do Senhor que fez o céu e a terra. <br> - SALMOS 121 -</p>
+
+        
+    </form>
+    <img src="imagens/pngtree-grunge-acre-flag-brazil-grunge-isolated-vector-png-image_5648396.png" alt="acre">
 </body>
 </html>
