terminado com sucesso

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav>
             <ul>
                 <li><a href="#">Sobre nós</a></li>
-                <li><a href="form.html">Trabalhe&nbsp; conosco</a></li>
+                <li><a href="form.html" target="_self">Trabalhe&nbsp; conosco</a></li>
                 <li><a href="#">Unidades</a></li>
-                <li><a href="card.html" target="_blank">Cardápio</a></li>
+                <li><a href="card.html" target="_self">Cardápio</a></li>
             </ul>
         </nav>
     </header>
@@ -27,38 +27,49 @@
         <h2>Sobre nós</h2>
 
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate odio omnis consectetur aperiam facilis error ratione? Rem voluptatibus ea quo itaque aperiam doloribus temporibus minima adipisci eos? Commodi, quod aut?
+            Sinta-se em casa e saboreie os sabores da nossa terra! No Restaurante Sabores da Terra, oferecemos um cardápio variado com pratos típicos da culinária acreana, feitos com ingredientes frescos e de alta qualidade. Um ambiente acolhedor e familiar, ideal para reunir a família e os amigos.
         </p>
     </section>
 
 
     <section class="imagem" id="img01">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ipsum a numquam vero voluptate corporis odio aut, doloremque animi sequi dolorem, id eum? Repudiandae velit magnam accusantium soluta a cupiditate.
-            Laudantium vero a nobis veniam autem molestias corporis perferendis odit, ipsum possimus facere vitae suscipit saepe eveniet voluptates quod minus sint aliquam optio numquam cumque vel deserunt atque! Commodi, accusantium?
+        
+        <h2>Nosso ambiente</h2>
+
+        <p>Nosso restaurante é decorado com elementos típicos da cultura brasileira, como bandeiras, quadros e objetos de artesanato. O ambiente é aconchegante e familiar, com mesas e cadeiras de madeira e um espaço para as crianças brincarem
         </p>
     </section>
 
 
     <section class="normal">
-        <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum aspernatur harum impedit deserunt! Unde magnam voluptatum excepturi mollitia voluptate quaerat sapiente, exercitationem aliquam assumenda expedita! Impedit sint doloribus maiores aliquam.
+        
+            <h2>Nosso compromisso</h2>
+        <p>   
+            No Restaurante Sabores da Terra, nos comprometemos a oferecer aos nossos clientes uma experiência gastronômica única, com pratos deliciosos e um atendimento de qualidade. Venha nos visitar e saboreie os sabores da nossa terra!
         </p>
     </section>
 
 
     <section class="imagem" id="img02">
+        <h2>Atendimento</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus consectetur consequatur at rem eos ab illo quia velit necessitatibus cumque exercitationem eligendi quidem perspiciatis, illum sequi voluptates laboriosam corporis? Dignissimos.
+            Atendimento cordial e personalizado, com garçons que conhecem o cardápio e podem dar sugestões para ajudar da melhor forma possivel.
+        </p>
     </section>
 
 
     <section class="normal">
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi assumenda inventore deserunt quibusdam. Eligendi quaerat atque asperiores, fugiat aliquid inventore incidunt deleniti adipisci. Iure atque saepe ipsa sed, ut sit!
+            Amantes da comida regional: Pessoas que apreciam a culinária brasileira e gostam de experimentar novos sabores, venha nos fazer uma visita.
+        </p>
     </section>
 </body>
 <footer>
     <p>&copy; 2024 Acreanos 68. Todos os direitos reservados.</p>
+    <div>
+        <h3>Siga a gente em nossas redes sociais</h3>
+        <a href="#"><img src="imagens/icons8-facebook-novo-50.png" alt="icones"></a>
+        <a href="#"><img src="imagens/icons8-instagram-50.png" alt="icones"></a>
+    </div>
 </footer>
 </html>
