teste de media query

--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="imagens/Acreanos-logo1.png" alt="">
+        <img class="logo" src="imagens/Acreanos-logo1.png" alt="logo principal">
         <h1>Venha fazer parte de nossa Equipe você também</h1>
         
         <div class="galeria">
