teste de media query

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3>O melhor do Acre para você</h3>
         <nav>
             <ul>
-                <li><a href="#">Sobre nós</a></li>
+                <li class="sobre"><a href="#">Sobre nós</a></li>
                 <li><a href="form.html" target="_self">Trabalhe&nbsp; conosco</a></li>
                 <li><a href="#">Unidades</a></li>
                 <li><a href="card.html" target="_self">Cardápio</a></li>
