--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
     </header>
     <form action="login.php" method="post">
         
-        <h2>Envie seu curriculum e seja mais um "Acreano" </h2>
+        <h2>Envie seu curriculo e seja mais um "Acreano" </h2>
             <input type="file" name="file" id="ifile">
 
         <input type="submit" value="Enviar">
